crates/macro-tools/tests/ui/accessors/fail/skip_with_other_options.rs
use picea_macro_tools::Accessors;

#[derive(Accessors)]
struct Meta {
    #[accessor(get, skip)]
    name: String,
}

fn main() {}
