crates/macro-tools/tests/ui/accessors/fail/skip_with_other_options.stderr
error: `skip` cannot be combined with other accessor options
 --> tests/ui/accessors/fail/skip_with_other_options.rs:5:5
  |
5 |     #[accessor(get, skip)]
  |     ^^^^^^^^^^^^^^^^^^^^^^
